<resources>
    <string name="app_name">AnimalDetectionAndroid</string>
    <string name="ayo_mulai">Ayo Mulai!</string>
    <string name="aplikasi_deteksi_hewan_otomatis_hanya_dengan_sekali_klik">Aplikasi Deteksi Hewan Otomatis hanya dengan sekali klik!</string>
    <string name="deteksi_hewan">Deteksi Hewan</string>
    <string name="riwayat_deteksi">Riwayat Deteksi</string>
    <string name="tidak_ada_riwayat_deteksi_n_riwayat_anda_akan_disimpan_di_sini">Tidak ada riwayat deteksi \n Riwayat anda akan disimpan di sini</string>
    <string name="animal_image_error_message">Animal image error message</string>
    <string name="animal_image_banner">Animal image banner</string>
    <string name="lanjutkan">Lanjutkan</string>
    <string name="galeri">Galeri</string>
    <string name="pilih_gambar_dari_galeri_anda_yang_ingin_dideteksi">Pilih gambar dari galeri anda yang ingin dideteksi</string>
    <string name="pilih_gambar">Pilih Gambar</string>
    <string name="gambar_analisis">Gambar Analisis</string>
    <string name="gagal_mengidentifikasi_gambar">Gagal mengidentifikasi gambar</string>
    <string name="tidak_dapat_menggunakan_fungsi_crop_untuk_saat_ini">Tidak dapat menggunakan fungsi crop untuk saat ini</string>
    <string name="tidak_ditemukan_foto_coba_lagi">Tidak ditemukan foto, coba lagi</string>
    <string name="tidak_ada_gambar_yang_dipilih">Tidak ada gambar yang dipilih</string>
    <string name="tidak_bisa_menyimpan_terjadi_kesalahan_menyimpan_data">Tidak bisa menyimpan, terjadi kesalahan menyimpan data</string>
    <string name="gambar_hasil_prediksi">Gambar hasil prediksi</string>
    <string name="hasil_analisis">Hasil Analisis</string>
    <string name="tanggal_analisis">Tanggal Analisis</string>
    <string name="hapus">Hapus</string>
    <string name="berhasil_menyimpan_hasil_prediksi">Berhasil menyimpan hasil prediksi!</string>
    <string name="deteksi_pengenalan_hewan">Deteksi Pengenalan Hewan</string>
    <string name="app_image">App Image</string>
</resources>