<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.MainActivity">

    <TextView
        android:id="@+id/tv_title_main"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:fontFamily="@font/poppins"
        android:text="@string/pilih_gambar"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_title_description_main"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/poppins"
        android:text="@string/pilih_gambar_dari_galeri_anda_yang_ingin_dideteksi"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@+id/tv_title_main"
        app:layout_constraintStart_toStartOf="@+id/tv_title_main"
        app:layout_constraintTop_toBottomOf="@+id/tv_title_main" />

    <Button
        android:id="@+id/button_select_picture"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:fontFamily="@font/poppins"
        android:text="@string/galeri"
        android:textColor="@color/white"
        app:icon="@drawable/baseline_photo_library_24"
        app:iconTint="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/tv_title_description_main"
        app:layout_constraintStart_toStartOf="@+id/tv_title_description_main"
        app:layout_constraintTop_toBottomOf="@+id/tv_title_description_main" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:cardCornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="@+id/tv_title_main"
        app:layout_constraintStart_toStartOf="@+id/tv_title_main"
        app:layout_constraintTop_toBottomOf="@+id/button_select_picture">

        <ImageView
            android:id="@+id/iv_photo_analyze"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:layout_margin="20dp"
            android:contentDescription="@string/gambar_analisis"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/sun_rise" />
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/button_next_main_activity"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:fontFamily="@font/poppins"
        android:text="@string/lanjutkan"
        android:textColor="@color/white"
        app:icon="@drawable/baseline_navigate_next_24"
        app:iconTint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/cardView"
        app:layout_constraintStart_toStartOf="@+id/cardView"
        app:layout_constraintTop_toBottomOf="@+id/cardView"
        app:layout_constraintVertical_bias="0.0" />
</androidx.constraintlayout.widget.ConstraintLayout>