<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="150dp"
    android:layout_marginTop="24dp"
    android:layout_marginBottom="24dp"
    app:cardCornerRadius="20dp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/iv_result_history"
            android:layout_width="120dp"
            android:layout_height="match_parent"
            android:contentDescription="@string/gambar_hasil_prediksi"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/tv_result_history"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/poppins"
            android:text="@string/hasil_analisis"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/iv_result_history"
            app:layout_constraintTop_toTopOf="@+id/iv_result_history" />

        <TextView
            android:id="@+id/tv_result_date_history"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/poppins"
            android:maxLines="1"
            android:text="@string/tanggal_analisis"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="@+id/tv_result_history"
            app:layout_constraintStart_toStartOf="@+id/tv_result_history"
            app:layout_constraintTop_toBottomOf="@+id/tv_result_history" />

        <Button
            android:id="@+id/button_delete_result_history"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/hapus"
            android:textColor="@color/white"
            app:icon="@drawable/baseline_delete_24"
            app:iconTint="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/tv_result_date_history"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/tv_result_date_history"
            app:layout_constraintTop_toBottomOf="@+id/tv_result_date_history"
            app:layout_constraintVertical_bias="1.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>